# ohs

./: .gitignore  Dockerfile.frontend  Dockerfile.instructor  Dockerfile.student  Makefile  README.md  collab.md  create_tables.sh  docker-compose.db.yml  docker-compose.yml  generate_gql_docs.sh  pyproject.toml  scope.md
backend/: .coveragerc  .flake8  Makefile  pyproject.toml  pytest.ini
backend/common/: app.py  graphql_controller.py  main.db  table_setup.sql
backend/common/domain/: __init__.py  course.py  user.py
backend/common/gql/: course_schema.py  graphql_controller.py  graphql_schema.py  user_schema.py
backend/common/tests/: test_app.py  test_graphql_controller.py
backend/core/: app.py  http.py  initialization.py  table_setup.sql
backend/core/api/: course_api.py  instructor_api.py  meeting_api.py  ohs_api.py  student_api.py
backend/core/authentication/: password_auth.py  token_auth.py
backend/core/domain/: course.py  meeting.py  user.py
backend/core/gql/: __init__.py  context.py  course_mutation.py  course_query.py  course_schema.py  graphql_controller.py  schema_registry.py  user_schema.py
backend/core/persistence/: authentication_persistence.py  course_persistence.py  instructor_persistence.py  meeting_persistence.py  student_persistence.py
backend/core/presistence/: authentication_presistence.py  connection_manager.py  course_persistence.py  instructor_persistence.py  meeting_persistence.py  student_persistence.py
backend/core/tests/: __init__.py  (+3 more)
backend/instructor_service/: graphql_schema.py  run.py
backend/student_service/: run.py
(+218 files in other folders)
